--- a/PotentialWell.ipynb
+++ b/PotentialWell.ipynb
@@ -19,14 +19,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# potential function\n",
     "def f(x):\n",
     "    return 1/4 * x**4 - 1/2*x**2\n",
     "\n",
+    "# second order differential equation with damping \n",
     "def dfdt(t,y,b):\n",
-    "\n",
     "    return np.array([ [ y[1]               ],\n",
-    "                      [ y[0]-y[0]**3-b*y[1]], ]).flatten()\n"
+    "                      [ y[0]-y[0]**3-b*y[1]], ]).flatten()"
    ]
   },
   {
@@ -35,16 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# time steps\n",
     "nframes = 600\n",
     "\n",
     "# time vector\n",
     "tf   = 50\n",
     "t    = np.linspace(0,tf,nframes)\n",
     "\n",
-    "# x vector for P(X)\n",
+    "# x vector for evaluate P(X)\n",
     "lim  = 1.85\n",
     "x    = np.linspace(-lim,lim,nframes)\n",
-    "\n",
     "\n",
     "# initial conditions 1\n",
     "b1   = 0                 # damping\n",
@@ -74,13 +74,9 @@
     "# y02  = np.array([1,      # x0\n",
     "#                  1.5])   # v0\n",
     "\n",
-    "\n",
-    "# Eval potential function \n",
-    "P = f(x)\n",
-    "\n",
     "def get_data(y0,b):\n",
     "\n",
-    "        # Phase Space, compute vector field Sx,Sy,Su,Sv\n",
+    "        # phase space, compute vector field Sx,Sy,Su,Sv\n",
     "        N_arrows = 20\n",
     "        klim     = 0.1\n",
     "        sxy      = np.linspace(-lim+klim,lim-klim,N_arrows)\n",
@@ -95,13 +91,16 @@
     "        Su = Y[0,:].reshape((N_arrows,N_arrows))\n",
     "        Sv = Y[1,:].reshape((N_arrows,N_arrows))\n",
     "\n",
-    "        # Integrate the dfdt(t,y)\n",
+    "        # integrate the dfdt(t,y)\n",
     "        sol   = ode45(dfdt,(0,tf),y0,t_eval=t,args=(b,))\n",
     "        phase = sol.y\n",
-    "        px = phase[0,:]\n",
-    "        py = phase[1,:]\n",
+    "        px    = phase[0,:] # x = f(t)\n",
+    "        py    = phase[1,:] # v = f(t) \n",
     "\n",
-    "        return Sx,Sy,Su,Sv,px,py"
+    "        return Sx,Sy,Su,Sv,px,py\n",
+    "\n",
+    "# evaluate the potential function \n",
+    "P = f(x)"
    ]
   },
   {
@@ -112,7 +111,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b37a374d79054ba988b4856b33ebae09",
+       "model_id": "38670c43b8fb46b98234463cd123a6e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,6 +135,7 @@
     }
    ],
    "source": [
+    "# subplot columns share the x-axis\n",
     "size      = 800\n",
     "size_fig  = (size*px2inch,size*px2inch) \n",
     "fig, ax   = plt.subplot_mosaic([[0,0,3,3],\n",
@@ -149,15 +149,15 @@
     "c_lines1    = 'tab:blue' \n",
     "c_lines2    = 'tab:red' \n",
     "ms          = 30\n",
-    "markers1 = dict(c='w',ec=c_lines1,s=ms)\n",
-    "markers2 = dict(c='w',ec=c_lines2,s=ms)\n",
+    "markers1    = dict(c='w',ec=c_lines1,s=ms)\n",
+    "markers2    = dict(c='w',ec=c_lines2,s=ms)\n",
     "\n",
-    "### 1º Column\n",
-    "### y0 = y01\n",
-    "### b  = b1\n",
-    "#########################################################\n",
+    "# 1º column subplots\n",
+    "# y0 = y01\n",
+    "# b  = b1\n",
     "Sx1,Sy1,Su1,Sv1,px1,py1 = get_data(y01,b1)\n",
     "\n",
+    "# plot potential function P(x)\n",
     "axi=ax[0]\n",
     "axi.plot(x,P,c_potencial)\n",
     "s1a = axi.scatter(y01[0],f(y01[0]),zorder=100,**markers1)\n",
@@ -165,12 +165,14 @@
     "axi.text(0,0.75,txt,ha='center',va='center',bbox=txt_box)\n",
     "plot_sets(axi,gr=True,ti='',yla='P(x) [J]',xli=[-lim,lim],ba=0.5)\n",
     "\n",
+    "# plot phase space x,v\n",
     "axi=ax[1]\n",
     "axi.quiver(Sx1,Sy1,Su1,Sv1,color=c_potencial,zorder=100,headwidth=6)\n",
     "axi.plot(px1,py1,c_lines1,zorder=50)\n",
     "s1b=axi.scatter(px1[0],py1[0],zorder=100,**markers1)\n",
     "plot_sets(axi,gr=True,ti='',yla='v [m/s]',xli=[-lim,lim],ba=1)\n",
     "\n",
+    "# plot x = f(t)\n",
     "axi=ax[2]\n",
     "axi.plot(px1,t,c=c_lines1)\n",
     "s1c=axi.scatter(px1[0],t[0],zorder=100,**markers1)\n",
@@ -178,11 +180,12 @@
     "plot_sets(axi,gr=True,ti='',xla='x [m]',yla='t [s]',xli=[-lim,lim],ba=0.5)\n",
     "\n",
     "\n",
-    "### 2º Column\n",
-    "### y0 = y02\n",
-    "### b  = b2\n",
-    "#########################################################\n",
+    "# 2º column subplots\n",
+    "# y0 = y02\n",
+    "# b  = b2\n",
     "Sx2,Sy2,Su2,Sv2,px2,py2 = get_data(y02,b2)\n",
+    "\n",
+    "# plot potential function P(x)\n",
     "axi=ax[3]\n",
     "axi.plot(x,P,c_potencial)\n",
     "s2a=axi.scatter(y02[0],f(y02[0]),zorder=100,**markers2)\n",
@@ -190,12 +193,14 @@
     "axi.text(0,0.75,txt,ha='center',va='center',bbox=txt_box)\n",
     "plot_sets(axi,gr=True,ti='',xli=[-lim,lim],ba=0.5,ticks_off=3)\n",
     "\n",
+    "# plot phase space x,v\n",
     "axi=ax[4]\n",
     "axi.quiver(Sx2,Sy2,Su2,Sv2,color=c_potencial,zorder=10,headwidth=6)\n",
     "axi.plot(px2,py2,c_lines2,zorder=50)\n",
     "s2b=axi.scatter(px2[0],py2[0],zorder=100,**markers2)\n",
     "plot_sets(axi,gr=True,ti='',xli=[-lim,lim],ba=1,ticks_off=3)\n",
     "\n",
+    "# plot x = f(t)\n",
     "axi=ax[5]\n",
     "axi.plot(px2,t,c=c_lines2)\n",
     "s2c=axi.scatter(px2[0],t[0],zorder=100,**markers2)\n",
