--- a/PotentialWell.ipynb
+++ b/PotentialWell.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from config_plots import plt,animation,plot_sets,px2inch,get_filename\n",
-    "from   scipy.integrate import solve_ivp as ode45\n",
     "import numpy as np\n",
+    "from   plots_config    import plt,animation,plot_sets,px2inch,get_filename\n",
+    "from   scipy.integrate import solve_ivp as ode45\n",
     "\n",
     "%matplotlib widget"
    ]
@@ -25,8 +25,8 @@
     "\n",
     "# second order differential equation with damping \n",
     "def dfdt(t,y,b):\n",
-    "    return np.array([ [ y[1]               ],\n",
-    "                      [ y[0]-y[0]**3-b*y[1]], ]).flatten()"
+    "    return np.array([ y[1]               ,\n",
+    "                      y[0]-y[0]**3-b*y[1]])"
    ]
   },
   {
@@ -111,7 +111,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38670c43b8fb46b98234463cd123a6e0",
+       "model_id": "69f426c82f5e442a9cabddd43d48f18e",
        "version_major": 2,
        "version_minor": 0
       },
